<resources>
    <string name="app_name">Android Final</string>
    <string name="description">Android Group Final Project</string>
    <string name="authors">Authors: Sam Liu, Zheng Huang, Chi Luo, Eric Cousineau</string>
    <!--Strings in activity_covid19_case.xml-->
    <string name="covid_toast_message">Covid-19 Case Data Activity\nWritten by: Sam Liu Ver 1.0</string>
    <string name="btn_to_TicketMaster">Ticket Master</string>
    <string name="btn_to_RecipeSearch">Recipe Search</string>
    <string name="btn_to_AudioApi">Audio Database Api</string>
    <string name="btn_to_Covid19Case">Covid-19 Cases</string>

    <string name="covid_activityTitle">Covid-19 Case Data</string>
    <string name="covid_search">Enter a country name and date to search data</string>
    <string name="covid_country_hint">Country</string>
    <string name="covid_date_hint">Date</string>

    <string name="covid_search_btn">Search</string>
    <string name="covid_save_btn">Save</string>
    <string name="covid_help_text">Help</string>
    <string name="covid_help_content">Please input country name and date in YYYY-MM-DD format, then click the search button to get the covid-19 case data based on provinces.</string>
    <string name="covid_yes">Yes</string>

    <string name="covidopen">open</string>
    <string name="covidclose">close</string>

    <!--strings in activity_province_detail.xml-->
    <string name="covid_country">Country: </string>
    <string name="covid_countryCode">Country Code: </string>
    <string name="covid_province">Province: </string>
    <string name="covid_case">Case: </string>
    <string name="covid_date">Date: </string>
    <string name="covid_latitude">Latitude: </string>
    <string name="covid_longitude">Longitude: </string>

    <!--strings in covid_menu.xml-->
    <string name="choice1">Go to Main Page </string>
    <string name="choice2">Records in Database </string>
    <string name="choice3">User Manual </string>
    <string name="choice4">About </string>

    <!--strings in header_covid.xml-->
    <string name="covidtitle">Activity Title: Covid-19 Case Data</string>
    <string name="covidauthor">Author: Sam Liu</string>
    <string name="covidversion">Ver 1.0 </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Receipe App</string>
    <string name="nav_header_subtitle">Search What You Like</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="searchbutton">Search</string>
    <string name="buttonsave">Save</string>
    <string name="Edit_Text">Enter Receipe Name</string>
    <string name="Edit_Text1">Enter Ingredient Name</string>
    <string name="receipe_toast_message">Receipe Search Activity\nWritten by: Huang Zheng Ver 1.0</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Favourites</string>

    <string name="ticket_hello_message">Enter city name here</string>

    <string name="ticket_activityTitle">Search Ticket</string>

    <string name="ticket_menu_home">Go back to Home page</string>

    <string name="ticket_user_manual">User Manual</string>

    <string name="ticket_menu_help">About us</string>

    <string name="ticketopen">open</string>

    <string name="ticketclose">close</string>

    <string name="ticket_help_text">Help</string>

    <string name="ticket_help_content">Please enter the city name, and a search radius for the events.The server will return a list of events scheduled in that city. </string>

    <string name="ticket_detail_help_content">You can save the details of events by clink the Save button,and then go check it from the favourite button from the index page.</string>

    <string name="ticket_yes">Yes</string>

    <string name="ticket_detailActivityTitle">Ticket Detail</string>

    <string name="ticket_Hint">Type city name here</string>

    <string name="ticket_Radius">Type your Radius</string>

    <string name="ticket_Button">SEARCH</string>

    <string name="ticket_collectionButton">FAVOURITE</string>
</resources>