<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/covidToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/covid_activityTitle"
        android:background="@color/cardview_shadow_start_color" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/covid_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/covid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_to_Covid19Case"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/covid_searchInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_search"
                android:textStyle="bold"
                android:textSize="20dp" />


            <LinearLayout
                android:id="@+id/search_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/country_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/covid_country_hint"
                    />

                <EditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/covid_date_hint"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/covid_search_btn" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/covid_save_btn" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:layout_weight="1"
                    android:id="@+id/province_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ListView
                    android:layout_weight="2"
                    android:id="@+id/database_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_covid"
            app:menu="@menu/covid_menu" >

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>